0.5.1
------
* bugfix: added 2 formats for jobs to keep backward compatiblity with 0.4.x

0.5.0
------
* feature: positional and keyword arguments for job functions as third and fourth job tuple element. this enables django
           management commands to be called, see documentation
           NOTE: this is a breaking change when you used job suffixes, they will move from third
                 to fifth job tuple element
* feature: prevent starting a job if an old instance of the same job is still running (thx arski)
* feature: logging job's possible exceptions (thx arski)

0.4.3
------
* bugfix: only replace "pyc" with "py" in file's extension (thx cinghiale)

0.4.2
------
* changed README from markdown to restructuredtext
* fixed a crappy distribution error with README

0.4.1 - broken!
------
* bugfix: list modification while iterating d77a48a (thx meric426)
* feature: setting CRONTAB_COMMENT overwritable now

0.4
------
* bugfix: crash related to Django 1.4 and move of manage.py

0.3
------
* new feature: added support for command pre- and suffixes (f.e. pipe stout/stderr into logfile)

0.2
------
* first public release