@@ -38,6 +38,10 @@ finally run this command to add all defined jobs from `CRONJOBS` to crontab (of 
 
     python manage.py crontab add
 
+show current active jobs of this project::
+
+    python manage.py crontab show
+
 removing all defined jobs is straight forward::
 
     python manage.py crontab remove
